--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ h1, h2, h3, h4 {
 }
 
 .highlight {
-    color: #3949ab;
+    color: #913831;
 }
 
 .btn {
@@ -176,7 +176,7 @@ h1, h2, h3, h4 {
 .hero {
     height: 100vh;
     background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), 
-                url('img0.jpeg');
+                url('imgg.jpg');
     background-size: cover;
     background-position: center;
     display: flex;
@@ -777,4 +777,5 @@ h1, h2, h3, h4 {
     .services-grid {
         grid-template-columns: 1fr;
     }
+
 }
