--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ h1, h2, h3, h4 {
 }
 
 .highlight {
-    color: red;
+    color: #FF0000;
 }
 
 .btn {
@@ -779,4 +779,5 @@ h1, h2, h3, h4 {
     }
 
 }
+
 
